Update CI configuration

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -9,12 +9,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: prepare
-      uses: actions/setup-python@v1
+      uses: actions/setup-python@v4
       with:
-        python-version: 3.9
+        python-version: 3.12.4
 
     - name: install
       run: pip install -r requirements.txt
