--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -22,7 +22,7 @@ jobs:
       run: pip install -r requirements.txt
 
     - name: test
-      run: pytest .
+      run: PYTHONPATH=. pytest
 
     - name: lint
       run: pre-commit run --all-files
